# movie-recommendation-system

./: .gitignore  pyproject.toml  requirements.txt
data/merged/: movie_content_final.csv  ratings_final.csv
models/: svd_tuned.joblib  tfidf_vectorizer.joblib
streamlit/: app.py  recommenders.py
