[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-recommendation-system"
version = "1.0.0"
description = "Movie Recommendation System using Multiple ML Approaches"
requires-python = ">=3.11,<3.12"

[tool.setuptools]
packages = ["streamlit"]
